# pyvlcb

./: .bumpversion.cfg  .gitignore  CONTRIBUTING.rst  HISTORY.rst  LICENSE  README.rst  can_server.py  pyproject.toml  requirements.txt  tasks.py  vcan.sh  vlcb.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: bandit.yml  python-package.yml
docs/: conf.py  index.rst  installation.rst  usage.rst
pyvlcb/: __init__.py  config.json  config_factory.json  pyvlcb.py  vlcb.py  vlcbdefs.py
pyvlcb/modules/: __init__.py  controller.py  params.py
pyvlcb/services/: __init__.py  can.py  mns.py  serialui.py  service.py
pyvlcb/transports/: can.py  transport.py
tests/: __init__.py  test_can.py  test_config.py  test_controller.py  test_module.py  test_pyvlcb.py  test_ui.py
