[tool]
[tool.poetry]
name = "pyvlcb"
version = "0.1.0"
homepage = "https://github.com/pj3parera/pyvlcb"
description = "Top-level package for Python port of VLCB."
authors = ["José Parera <j3parera@gmail.com>"]
readme = "README.rst"
license = "MIT"
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
]
packages = [{ include = "pyvlcb" }, { include = "tests", format = "sdist" }]

[tool.poetry.dependencies]
python = ">=3.7,<4"

[tool.poetry.dev-dependencies]
bump-my-version = "*"
coverage = "*"
flake8 = "*"
invoke = "*"
isort = "*"
pylint = "*"
pytest = ">=7.2.0"
sphinx = ">=5.3.0"
black = "*"

[tool.bumpversion]
current_version = "0.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = false
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[tool.isort]
profile = "black"

[tool.pylint]
disable = 'C3001'
max-line-length = 140

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
